--- a/Sjuklöner/Views/Claims/Create4.cshtml
+++ b/Sjuklöner/Views/Claims/Create4.cshtml
@@ -1,8 +1,8 @@
 ﻿@model Sjuklöner.Viewmodels.Create4VM
 @{
-                /**/
+    /**/
 
-                ViewBag.Title = "Bilagor";
+    ViewBag.Title = "Bilagor";
 }
 
 <div class="row margin-breadcrumb">
@@ -47,6 +47,11 @@
         <p class="col col-md-10 second-page-header2">Steg 4 av 4: Ladda upp bilagor och skicka in ansökan</p>
     </div>
     <div class="row">
+        <div class="col col-md-1 no-col-padding">
+            @Html.EditorFor(model => model.NumberOfSickDays, new { htmlAttributes = new { @class = "form-control hidden-field", id = "numberofsickdays" } })
+        </div>
+    </div>
+    <div class="row">
         <div class="form-horizontal">
             <div class="row row-height-14">
                 <div class="col col-md-2">
@@ -66,7 +71,7 @@
             </div>
             <div class="row row-height-14 line-height-07">
                 <div class="col col-md-offset-2 col-md-10">
-                    @Html.ValidationMessageFor(model => model.SalaryAttachment, "", new { @class = "text-danger font-size-11" })
+                    @Html.ValidationMessageFor(model => model.SalaryAttachment, "", new { @class = "text-danger font-size-11", id = "salaryspec-regassistant-val" })
                 </div>
             </div>
             <div class="row row-height-14">
@@ -92,7 +97,7 @@
                 </div>
                 <div class="row row-height-14 line-height-07">
                     <div class="col col-md-offset-2 col-md-10">
-                        @Html.ValidationMessageFor(model => model.DoctorsCertificate, "", new { @class = "text-danger font-size-11" })
+                        @Html.ValidationMessageFor(model => model.DoctorsCertificate, "", new { @class = "text-danger font-size-11", id = "doctors-certificate-val" })
                     </div>
                 </div>
                 <div class="row row-height-14">
@@ -141,7 +146,7 @@
             </div>
             <div class="row row-height-14 line-height-07">
                 <div class="col col-md-offset-2 col-md-10">
-                    @Html.ValidationMessageFor(model => model.TimeReport, "", new { @class = "text-danger font-size-11" })
+                    @Html.ValidationMessageFor(model => model.TimeReport, "", new { @class = "text-danger font-size-11", id = "timereport-regassistant-val" })
                 </div>
             </div>
             <div class="row row-height-14">
@@ -176,7 +181,7 @@
                 </div>
                 <div class="row row-height-14 line-height-07">
                     <div class="col col-md-offset-2 col-md-10">
-                        @Html.ValidationMessageFor(model => model.TimeReportStandIn[i], "", new { @class = "text-danger font-size-11" })
+                        @Html.ValidationMessageFor(model => model.TimeReportStandIn[i], "", new { @class = "text-danger font-size-11", id = "timereport-subassistant-val" })
                     </div>
                 </div>
                 <div class="row row-height-14">
@@ -210,6 +215,10 @@
                     </div>
                 </div>
             </div>
+            <div class="row row-validation-20 line-height-07">
+                <div class="col col-md-offset-2 col-md-8 text-danger font-size-11 small-col-padding2" id="valerror-on-page">
+                </div>
+            </div>
         </div>
     </div>
 }
@@ -218,11 +227,67 @@
 }
 <script type="text/javascript">
     $('#PdfEventOmbudCreate4').delay(4000).hide(1500);
-</script>
-<script type="text/javascript">
+@*</script>
+<script type="text/javascript">*@
     $('#PdfEventCreate4Fail').delay(100000).hide(1500);
-</script>
-<script>
+@*</script>
+<script>*@
+    $(document).ready(function assignIdsToSubAssistants() {
+        var form = document.getElementsByTagName("form");
+        for (var i = 0; i < form.length; i++) {
+            form[i].id = "form";
+        }
+
+        $("form").submit(function (e) {
+            if (!checkValidationErrors()) {
+                var erroronpage = document.getElementById('valerror-on-page');
+                erroronpage.innerHTML = "Fel måste rättas först innan det går att spara eller skicka in ansökan.";
+                e.preventDefault();
+            }
+        });
+    });
+
+    function checkValidationErrors() {
+        var validationErrorFound = false;
+
+        var salaryspecregassistantval = document.getElementById('salaryspec-regassistant-val');
+        var doctorscertificateval = document.getElementById('doctors-certificate-val');
+        var timereportregassistantval = document.getElementById('timereport-regassistant-val');
+        var timereportsubassistantval = document.getElementsByClassName('timereport-subassistant-val');
+
+        if (!validationErrorFound) {
+            if (salaryspecregassistantval.innerHTML != "" ||
+                timereportregassistantval.innerHTML != "") {
+                validationErrorFound = true;
+            }
+        }
+
+        var idx = 0;
+        while (!validationErrorFound && idx < timereportsubassistantval.length) {
+            if (timereportsubassistantval[i].innerHTML != "") {
+                validationErrorFound = true;
+            }
+            idx++;
+        }
+
+        if (!validationErrorFound) {
+            //number of sickdays needs to be retrieved in order to figure out if doctors certificate shall be validated
+            var numberofsickdays = parseInt(document.getElementById('numberofsickdays').value);
+            if (numberofsickdays > 7) {
+                if (doctorscertificateval.innerHTML != "") {
+                    validationErrorFound = true;
+                }
+            }
+        }
+
+        if (!validationErrorFound) {
+            return true;
+        }
+        else {
+            return false;
+        }
+    }
+
     $(function () {
         $(".js-show-view-btn").click(function (e) {
             e.preventDefault();
