--- a/Sjuklöner/Views/Claims/ClaimDetailsPdf.cshtml
+++ b/Sjuklöner/Views/Claims/ClaimDetailsPdf.cshtml
@@ -994,24 +994,45 @@
                         </div>
                     }
 
+                    @*if (Model.RejectReason != null)
+                            {
+                                        <div class="row">
+                                            <div class="col col-md-5">
+                                                <div class="form-group line-height-12">
+                                                    <div class="row label-padding">
+                                                        @Html.LabelFor(model => model.RejectReason, htmlAttributes: new { @class = "control-label-left-align col-md-12" })
+                                                    </div>
+                                                    <div class="row display-padding">
+                                                        @Html.DisplayFor(m => m.RejectReason)
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col col-md-5">
+                                        </div>
+                        }*@
                     @if (Model.RejectReason != null)
                     {
                         <div class="row">
-                            <div class="col col-md-5">
+                            <div class="col col-md-10">
                                 <div class="form-group line-height-12">
                                     <div class="row label-padding">
                                         @Html.LabelFor(model => model.RejectReason, htmlAttributes: new { @class = "control-label-left-align col-md-12" })
                                     </div>
-                                    <div class="row display-padding">
-                                        @Html.DisplayFor(m => m.RejectReason)
-                                    </div>
+
+                                    @{string[] splitStrings = { ". " };
+                                        var rejectReasons = Model.RejectReason.Split(splitStrings, StringSplitOptions.RemoveEmptyEntries);
+                                        foreach (var reason in rejectReasons)
+                                        {
+                                            <div class="row display-padding">
+                                                @reason.
+                                            </div>
+                                        }
+                                    }
                                 </div>
                             </div>
                         </div>
-                        <div class="col col-md-5">
-                        </div>
                     }
-
                 </div>
             </div>
 
