--- a/Sjuklöner/Content/Site.css
+++ b/Sjuklöner/Content/Site.css
@@ -1280,6 +1280,10 @@ li a {
     border-bottom: solid #005c86 1px;
 }
 
+.top-border {
+    border-top: solid #005c86 1px;
+}
+
 .row-height-10 {
     height: 10px;
 }
@@ -1302,6 +1306,11 @@ li a {
 
 .margin-bottom-small2 {
     margin-bottom: 16px;
+}
+
+.margin-bottom-small4 {
+    margin-bottom: 0;
+    margin-top:0;
 }
 
 .margin-bottom-medium {
@@ -1333,6 +1342,15 @@ li a {
 
 .row-height-14 {
     height: 14px;
+}
+
+.row-height-14-3 {
+    height: 14px;
+    padding-top: 2px;
+}
+
+.row-height-16 {
+    height: 16px;
 }
 
 .row-height-14-2 {
